I have fixed several make bugs.  Most importantly make clean now works.  I fixed 'po/Makefiles' so make clean will now work.  I also documentad my fixes & changes in ChangeLog and added myself to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,9 @@
 
  * Brian Pepple  <bpepple@fedoraproject.org>
 
+--- Direct Messaging, Avatar size/message scrolling, memory leaks patches/fixes.
+
+ * Kaity G. B. <KaityGB-at-uberChicGeekChick.Com>
 
 --- Translators:
 
