Why do programmers never think of environmental variables but use shell commands & scripts that rely on a command to return a value formatted a certain way?  Please, developers remember where you come from & think of what you have been through.  Any ways Twitux build process no longer relys on depricated files.  Multiple language support now works and installs correctly.  [base: svn rev 372 - svn patch: uberChicks:po+changelog.svn.diff ]

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@
 
  * Brian Pepple  <bpepple@fedoraproject.org>
 
---- Direct Messaging, Avatar size/message scrolling, memory leaks patches/fixes.
+--- Various fixes, patches, & improvements
 
  * Kaity G. B. <KaityGB-at-uberChicGeekChick.Com>
 
