I updated my contact email to uberChicGeekChick@openSUSE.us

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@
 
 --- Various fixes, patches, & improvements
 
- * Kaity G. B. <KaityGB-at-uberChicGeekChick.Com>
+ * Kaity G. B. <uberChicGeekChick@openSUSE.us>
 
 --- Translators:
 
