I improved a lot of objects that were being created & now have them being unreferenced.  So fare I have only focused on one known memory leak causing object but this alone is improving the performance & I now have a much smaller foot print.  I also cleaned up the rest of the subversions stuff.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2009-03-01  Kaity G. B. <uberChick@uberChicGeekChick.Com>
 
-	* ./: officially forked from twitux.
+	* ./*: forked from twitux.
 		The changes below where submitted but most where not accepted
 		& again the fact that I'm an artist & those programming are
 		standard ignorant, arogant, engineer wanna be types.
@@ -8,6 +8,27 @@
 		~shrug~ oh well I've learned my final lessons about wanting to
 		join & contribute to existing OSS projects & the open source
 		community.
+
+	* directories: ./.svn, ./src/.svn, ./libtwitux/.svn, ./data/.svn,
+	./data/glade/.svn, ./po/.svn, ./help/.svn, ./help/C/.svn
+		All subversion trails are now removed.  I have to fork but I
+		merge in others code especially if mine is unwanted.
+	
+	* src/twitux-tweet-list.c, src/twitux-app.c &
+	src/twitux-send-message-dialog.c: [unrefernced *many* priv objects]
+		In all of these source files the macro GET_PRIV returns a
+		gobject container of many other gobjects.  I have unreferenced
+		all of the used instances of priv.  These do need improved so
+		a custum macro, or method, needs to be used to unreference
+		each object in the container object than the object itself.
+		But at least at this point there is a lot less memory used &
+		the foot print doesn't bloat as fast.  I'm sure there are many
+		other similar situations.  Slowly I am plugging the memory
+		leaks.
+
+	* src/twitux-app.c: removed unused objects.
+		There were 3 methods where priv objects were being defined and
+		initialized but never used.  So that's gone.
 
 2009-02-29  Kaity G. B. <uberChick@uberChicGeekChick.Com>
 
