--- a/src/.deps/twitux-network.Po
+++ b/src/.deps/twitux-network.Po
@@ -64,11 +64,7 @@ twitux-network.o: twitux-network.c ../config.h /usr/include/string.h \
   /usr/include/glib-2.0/glib/gtimer.h /usr/include/glib-2.0/glib/gtree.h \
   /usr/include/glib-2.0/glib/gurifuncs.h /usr/include/libintl.h \
   /usr/include/locale.h /usr/include/bits/locale.h \
-  /usr/include/glib-2.0/glib/gprintf.h /usr/include/stdio.h \
-  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
-  /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/include/gtk-2.0/gtk/gtk.h \
-  /usr/include/gtk-2.0/gdk/gdk.h \
+  /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
   /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
   /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
   /usr/include/glib-2.0/gio/gioenums.h \
@@ -154,8 +150,10 @@ twitux-network.o: twitux-network.c ../config.h /usr/include/string.h \
   /usr/include/pango-1.0/pango/pango-layout.h \
   /usr/include/pango-1.0/pango/pango-tabs.h \
   /usr/include/pango-1.0/pango/pango-renderer.h \
-  /usr/include/pango-1.0/pango/pango-utils.h \
-  /usr/lib64/gtk-2.0/include/gdkconfig.h \
+  /usr/include/pango-1.0/pango/pango-utils.h /usr/include/stdio.h \
+  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
+  /usr/include/bits/stdio.h /usr/lib64/gtk-2.0/include/gdkconfig.h \
   /usr/include/gtk-2.0/gdk/gdkdisplay.h \
   /usr/include/gtk-2.0/gdk/gdkevents.h \
   /usr/include/gtk-2.0/gdk/gdkcolor.h /usr/include/gtk-2.0/gdk/gdkdnd.h \
@@ -637,22 +635,6 @@ twitux-network.o: twitux-network.c ../config.h /usr/include/string.h \
 
 /usr/include/bits/locale.h:
 
-/usr/include/glib-2.0/glib/gprintf.h:
-
-/usr/include/stdio.h:
-
-/usr/include/libio.h:
-
-/usr/include/_G_config.h:
-
-/usr/include/wchar.h:
-
-/usr/include/bits/stdio_lim.h:
-
-/usr/include/bits/sys_errlist.h:
-
-/usr/include/bits/stdio.h:
-
 /usr/include/gtk-2.0/gtk/gtk.h:
 
 /usr/include/gtk-2.0/gdk/gdk.h:
@@ -840,6 +822,20 @@ twitux-network.o: twitux-network.c ../config.h /usr/include/string.h \
 /usr/include/pango-1.0/pango/pango-renderer.h:
 
 /usr/include/pango-1.0/pango/pango-utils.h:
+
+/usr/include/stdio.h:
+
+/usr/include/libio.h:
+
+/usr/include/_G_config.h:
+
+/usr/include/wchar.h:
+
+/usr/include/bits/stdio_lim.h:
+
+/usr/include/bits/sys_errlist.h:
+
+/usr/include/bits/stdio.h:
 
 /usr/lib64/gtk-2.0/include/gdkconfig.h:
 
