--- a/src/.deps/twitux-send-message-dialog.Po
+++ b/src/.deps/twitux-send-message-dialog.Po
@@ -64,7 +64,11 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
   /usr/include/glib-2.0/glib/gtimer.h /usr/include/glib-2.0/glib/gtree.h \
   /usr/include/glib-2.0/glib/gurifuncs.h /usr/include/libintl.h \
   /usr/include/locale.h /usr/include/bits/locale.h \
-  ../libtwitux/twitux-conf.h /usr/include/glib-2.0/glib-object.h \
+  /usr/include/glib-2.0/glib/gprintf.h /usr/include/stdio.h \
+  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
+  /usr/include/bits/stdio.h ../libtwitux/twitux-conf.h \
+  /usr/include/glib-2.0/glib-object.h \
   /usr/include/glib-2.0/gobject/gboxed.h \
   /usr/include/glib-2.0/gobject/gtype.h \
   /usr/include/glib-2.0/gobject/genums.h \
@@ -151,10 +155,8 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
   /usr/include/pango-1.0/pango/pango-layout.h \
   /usr/include/pango-1.0/pango/pango-tabs.h \
   /usr/include/pango-1.0/pango/pango-renderer.h \
-  /usr/include/pango-1.0/pango/pango-utils.h /usr/include/stdio.h \
-  /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h \
-  /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h \
-  /usr/include/bits/stdio.h /usr/lib64/gtk-2.0/include/gdkconfig.h \
+  /usr/include/pango-1.0/pango/pango-utils.h \
+  /usr/lib64/gtk-2.0/include/gdkconfig.h \
   /usr/include/gtk-2.0/gdk/gdkdisplay.h \
   /usr/include/gtk-2.0/gdk/gdkevents.h \
   /usr/include/gtk-2.0/gdk/gdkcolor.h /usr/include/gtk-2.0/gdk/gdkdnd.h \
@@ -398,9 +400,10 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
   /usr/include/gtk-2.0/gtk/gtkoldeditable.h \
   /usr/include/gtk-2.0/gtk/gtkoptionmenu.h \
   /usr/include/gtk-2.0/gtk/gtkpreview.h \
-  /usr/include/gtk-2.0/gtk/gtktipsquery.h twitux.h \
+  /usr/include/gtk-2.0/gtk/gtktipsquery.h twitux.h twitux-app.h \
+  ../libtwitux/twitux-paths.h twitux-parser.h \
   twitux-send-message-dialog.h twitux-spell.h twitux-spell-dialog.h \
-  twitux-network.h twitux-parser.h
+  twitux-network.h
 
 ../config.h:
 
@@ -593,6 +596,22 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
 /usr/include/locale.h:
 
 /usr/include/bits/locale.h:
+
+/usr/include/glib-2.0/glib/gprintf.h:
+
+/usr/include/stdio.h:
+
+/usr/include/libio.h:
+
+/usr/include/_G_config.h:
+
+/usr/include/wchar.h:
+
+/usr/include/bits/stdio_lim.h:
+
+/usr/include/bits/sys_errlist.h:
+
+/usr/include/bits/stdio.h:
 
 ../libtwitux/twitux-conf.h:
 
@@ -787,20 +806,6 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
 /usr/include/pango-1.0/pango/pango-renderer.h:
 
 /usr/include/pango-1.0/pango/pango-utils.h:
-
-/usr/include/stdio.h:
-
-/usr/include/libio.h:
-
-/usr/include/_G_config.h:
-
-/usr/include/wchar.h:
-
-/usr/include/bits/stdio_lim.h:
-
-/usr/include/bits/sys_errlist.h:
-
-/usr/include/bits/stdio.h:
 
 /usr/lib64/gtk-2.0/include/gdkconfig.h:
 
@@ -1332,6 +1337,12 @@ twitux-send-message-dialog.o: twitux-send-message-dialog.c ../config.h \
 
 twitux.h:
 
+twitux-app.h:
+
+../libtwitux/twitux-paths.h:
+
+twitux-parser.h:
+
 twitux-send-message-dialog.h:
 
 twitux-spell.h:
@@ -1339,5 +1350,3 @@ twitux-spell.h:
 twitux-spell-dialog.h:
 
 twitux-network.h:
-
-twitux-parser.h:
