I have fixed a bug that was causing the same avatar to be displayed for different friends even though they, clearly, had unique avatars.  I also improved the efficancy of the code for fetching friends & followers.  Lastly I removed multiple unused variables.:

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,15 +1,20 @@
---- Author:
+--- Artist(s):
+	*Kaity G. B. <uberChick@uberChicGeekChick.Com>
+		http://uberChicGeekChick.Com/
+		http://twitter.com/uberChick
 
+--- Special Thanks ( Testing, feedback, & etc )
+	*Lord_Drachenblut
+		http://thedigitaldragonslair.com/
+		http://twitter.com/lorddrachenblut
+
+---------------------------------------------------------------
+--- Twitux Author
  * Daniel Morales <daniminas@gmail.com>
-
 
 --- Contributors/Big thanks to:
 
  * Brian Pepple  <bpepple@fedoraproject.org>
-
---- Various fixes, patches, & improvements
-
- * Kaity G. B. <uberChicGeekChick@openSUSE.us>
 
 --- Translators:
 
