--- a/src/.deps/about.Po
+++ b/src/.deps/about.Po
@@ -1,5 +1,5 @@
-twitux-about.o: twitux-about.c ../config.h \
-  /usr/include/glib-2.0/gio/gio.h /usr/include/glib-2.0/gio/giotypes.h \
+about.o: about.c ../config.h /usr/include/glib-2.0/gio/gio.h \
+  /usr/include/glib-2.0/gio/giotypes.h \
   /usr/include/glib-2.0/gio/gioenums.h \
   /usr/include/glib-2.0/glib-object.h \
   /usr/include/glib-2.0/gobject/gboxed.h \
@@ -119,7 +119,7 @@ twitux-about.o: twitux-about.c ../config.h \
   /usr/include/locale.h /usr/include/bits/locale.h /usr/include/string.h \
   /usr/include/bits/string.h /usr/include/bits/string2.h \
   /usr/include/endian.h /usr/include/bits/endian.h \
-  /usr/include/bits/byteswap.h /usr/include/stdlib.h twitux-about.h \
+  /usr/include/bits/byteswap.h /usr/include/stdlib.h about.h \
   /usr/include/gtk-2.0/gtk/gtk.h /usr/include/gtk-2.0/gdk/gdk.h \
   /usr/include/gtk-2.0/gdk/gdkapplaunchcontext.h \
   /usr/include/gtk-2.0/gdk/gdkscreen.h /usr/include/cairo/cairo.h \
@@ -712,7 +712,7 @@ twitux-about.o: twitux-about.c ../config.h \
 
 /usr/include/stdlib.h:
 
-twitux-about.h:
+about.h:
 
 /usr/include/gtk-2.0/gtk/gtk.h:
 
